modified some main page

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -264,61 +264,11 @@
                     <li>
                         <a href="table.html"><i class="fa fa-table"></i> 微博详情</a>
                     </li>
-                    <li>
-                        <a href="ui-elements.html"><i class="fa fa-desktop"></i> UI</a>
-                    </li>
-					 <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> Charts<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="chart.html">Charts JS</a>
-                            </li>
-                            <li>
-                                <a href="morris-chart.html">Morris Chart</a>
-                            </li>
-							</ul>
-						</li>	
-							
-                    <li>
-                        <a href="tab-panel.html"><i class="fa fa-qrcode"></i> Tabs & Panels</a>
-                    </li>
-                    
-
-                    <li>
-                        <a href="form.html"><i class="fa fa-edit"></i> Forms </a>
-                    </li>
 
 
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Second Level Link</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Link</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Link<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
 
-                                </ul>
 
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="empty.html"><i class="fa fa-fw fa-file"></i> Empty Page</a>
-                    </li>
+
                 </ul>
 
             </div>
@@ -368,8 +318,8 @@
                         <div class="panel panel-primary">
 						<div class="number">
 							<h3>
-								<h3>32,850</h3>
-								<small>Sales</small>
+								<h3>Null</h3>
+								<small>用户数量</small>
 							</h3> 
 						</div>
 						<div class="icon">
@@ -385,7 +335,7 @@
                         <div class="panel panel-primary">
 						<div class="number">
 							<h3>
-								<h3>56,150</h3>
+								<h3>Null</h3>
 								<small>Comments</small>
 							</h3> 
 						</div>
@@ -402,7 +352,7 @@
                         <div class="panel panel-primary">
 						<div class="number">
 							<h3>
-								<h3>89,645</h3>
+								<h3>Null</h3>
 								<small>Daily Profits</small>
 							</h3> 
 						</div>
