--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -286,7 +286,7 @@
                 <ul id="shows">
                     <li v-for="show in shows"><a  href="#" target="_blank">
                         <p class="name">微博ID：{{show.weiboid}}</p>
-                        <p class="say" id="content">{{show.content}}</p>
+                        <p class="say" id="content" v-html="show.content">{{show.content}}</p>
                         <p class="infor">发表时间：{{show.time.format(DATE_HOUR_MINUTE_SECOND_FORMAT)}}</p></a>
                     </li>
                 </ul>
@@ -610,8 +610,8 @@
 			
 		
 				<footer><p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-				
-        
+
+
 				</footer>
             </div>
             <!-- /. PAGE INNER  -->
@@ -623,7 +623,7 @@
     <script type="text/javascript">
         function autoScroll(obj){
             $(obj).find("ul").animate({
-                marginTop : "-180px"
+                marginTop : "-210px"
             },1500,function(){
                 $(this).css({marginTop : "0px"}).find("li:first").appendTo(this);
             })
