--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta content="" name="description"/>
     <meta content="webthemez" name="author"/>
-    <title>Bootstrap Admin html Template</title>
+    <title>微博后台管理系统</title>
+    <link href="static/css/index.css" rel="stylesheet">
+    <link href="static/css/mengular.css" rel="stylesheet">
+    <link href="static/css/bootstrap.css" rel="stylesheet"/>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/css/custom-styles.css" rel="stylesheet"/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+    <link href="static/js/dataTables/dataTables.bootstrap.css" rel="stylesheet"/>
+    <link href="static/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
+
     <script src="dwr/engine.js"></script>
     <script src="dwr/interface/AdminManager.js"></script>
     <script src="dwr/interface/WeiboManager.js"></script>
@@ -16,13 +25,7 @@
     <script src="static/js/jquery.metisMenu.js"></script>
     <script src="static/js/index1.js"></script>
     <script src="static/js/weibo1.js"></script>
-    <link href="static/css/index.css" rel="stylesheet">
-    <link href="static/css/mengular.css" rel="stylesheet">
-    <link href="static/css/bootstrap.css" rel="stylesheet"/>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="static/css/custom-styles.css" rel="stylesheet"/>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
-    <link href="static/js/dataTables/dataTables.bootstrap.css" rel="stylesheet"/>
+    <script src="static/js/custom-scripts.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -34,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="main.html"><strong><i class="icon fa fa-plane"></i> BRILLIANT</strong></a>
+            <a class="navbar-brand" href="main.html"><strong><i class="icon fa fa-plane"></i> 微博后台管理系统</strong></a>
             <div id="sideNav" href="">
                 <i class="fa fa-bars icon"></i>
             </div>
